<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        tools:context=".EntryActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="273dp"
            android:layout_height="299dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/glasses_invert" />

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="215dp"
            android:layout_height="70dp"
            android:layout_marginTop="32dp"
            android:onClick="initiateCreation"
            android:text="@string/home_newChar"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/button2"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="215dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:text="@string/home_loadChar"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button3"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="215dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:text="@string/home_listView"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>